Fix table overflow hidden thing

--- a/sass/blocks/_profile-table.sass
+++ b/sass/blocks/_profile-table.sass
@@ -20,7 +20,6 @@ $block: ".profile-table"
   display: block
   width: 100%
   border: 1px solid map-get($app-palette, border-primary)
-  overflow: hidden
 
   // $Common table MOD: type common
   &_type_common
@@ -41,7 +40,6 @@ $block: ".profile-table"
     align-items: stretch
     width: 100%
     background-color: map-get($app-palette, bg-light)
-    overflow: hidden
 
     #{$block}_type_common &
       display: table-row
